[tool.poetry]
name = "funwavetvdtools"
version = "0.1.0"
description = "Tools for preprocessing and postprocessing data for FUNWAVE-TVD\""
authors = [
   "Michael-Angelo Y.-H. Lam <michaelangelo.yh.lam@gmail.com>",
   "Fabian Garcia Moreno <test@gmail.com>",
   "Gabriela Salgado-Dominguez <test@gmail.com>"
]
maintainers = [
   "Michael-Angelo Y.-H. Lam <michaelangelo.yh.lam@gmail.com>"
]
keywords = ["funwave-tvd"]
license = "BSD-2-Clause"
readme = "README.md"

[project.urls]
documentation = "https://mayhl.github.io/FUNWAVE-TVD-Python-Tools/"
repository = "https://github.com/mayhl/FUNWAVE-TVD-Python-Tools"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
