[tool.poetry]
name = "funwavetvdtools"
version = "0.1.1"
description = "Tools for preprocessing and postprocessing data for FUNWAVE-TVD\""
authors = [
   "Michael-Angelo Y.-H. Lam <michaelangelo.yh.lam@gmail.com>",
   "Fabian Garcia Moreno <test@gmail.com>",
   "Gabriela Salgado-Dominguez <test@gmail.com>"
]
maintainers = [
   "Michael-Angelo Y.-H. Lam <michaelangelo.yh.lam@gmail.com>"
]
keywords = ["funwave-tvd"]
license = "BSD-2-Clause"
readme = "README.md"

[project.urls]
documentation = "https://mayhl.github.io/FUNWAVE-TVD-Python-Tools/"
repository = "https://github.com/mayhl/FUNWAVE-TVD-Python-Tools"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"
tqdm = "^4.65.0"
bokeh = "3.0.3"
cmocean = "^3.0.3"
argparse = "^1.4.0"
pandas = "^2.0.1"
shapely = "<2.0"
pyproj = "^3.5.0"
jinja2 = "3.0.3"

[tool.poetry.group.dev.dependencies]
black = "^21.9b0"
pre-commit = "^2.15.0"
isort = "^5.9.3"
autoflake = "^1.4"
nbstripout = "^0.6.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
logilab-sphinx-themes = "^0.2.0"
autodocsumm = "^0.2.11"
enum-tools = {extras = ["sphinx"], version = "^0.9.0.post1"}
nbsphinx = "^0.9.1"
ipython = "<8.13.0,>8.8.0"


[tool.poetry.group.nb.dependencies]
jupyterlab = "^3.6.3"
jupyter-bokeh = "^3.0.7"

[tool.poetry2conda]
name = "funwavetvdtools"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
